# gradio-mssql-gemini

./: .gitignore  README.md  pyproject.toml  query_results.xlsx
.gradio/flagged/: dataset1.csv
analysis_ai/: README.md  ai_analysis.py  db_setup.py  germany_sales_dashboard.html  germany_sales_dashboard.qmd  germany_sales_pdf.qmd  germany_sales_pdf_all.qmd  germany_sales_pdf_all_altair.qmd  germany_sales_ppt.pptx  germany_sales_ppt_altair.pptx  germany_sales_ppt_altair.qmd  plot_description.py
assets/schema/: schema.csv  schema.xlsx
docs/: architecture.md  extending.md  quickstart.md
examples/pdf-briefing/: README.md  app.py  create_combinations.py  sales_pdf.qmd
examples/ppt-deck/: README.md  ppt_deck.qmd
examples/sales-dashboard/: README.md  forecasting_app.py  sales_forecaster.py
examples/sql-adk/: README.md  app_df.py  app_plot.py  app_plot_old.py  app_speech.py
examples/sql-assistant/: README.md  app_df.py  app_plot.py  app_speech.py
forecasting/: __init__.py  sales_forecaster.py
forecasting/outputs/: forecast_results_20250218_120426.xlsx  forecast_results_20250218_140449.xlsx  forecast_results_20250218_140956.xlsx  forecast_results_20250218_142237.xlsx  forecast_results_20250218_144451.xlsx  forecast_results_20250218_150537.xlsx  forecast_results_20250219_113929.xlsx  forecast_results_20250220_103024.xlsx  forecast_results_20250225_180659.xlsx  (+7 more)
natural_language/: app_plot.py  app_speech.py  run_chatbot.py
reporting/: README.md  app.py  current_filters.json  sales_pdf.qmd  valid_combinations.csv
scripts/: render_all.sh  render_dashboard.py
(+6 files in other folders)
